# melody

./: .gitignore  README.md  pyproject.toml
docs/: accessing-clusters.md  accessing_kibana.md  guide_to_deploy_spark_job.md  updating_clusters.md
src/: main.py
src/core/: flow_runner.py
src/flows/: test.yml
src/projects/aws-eks/: Pulumi.yaml  README.md  identity.ts  index.ts  package-lock.json  package.json
